letter spacing issue in desc fixed

--- a/source/stylesheets/partials/_sprint.css.scss
+++ b/source/stylesheets/partials/_sprint.css.scss
@@ -83,6 +83,8 @@
   }
 
   .desc{
+    letter-spacing: 0.4px;
+    
     p{
       font-family: $heading-font-family;
       font-size: 24px;
